# mandelbrot-set

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  main.code-workspace
src/: CMakeLists.txt  main.cpp  mandelbrot.cpp  mandelbrot.hpp
